--- a/week3/package.json
+++ b/week3/package.json
@@ -7,8 +7,7 @@
     "start": "nodemon app.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-    "swagger": "node ./swagger.js"
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "repository": {
     "type": "git",
@@ -24,15 +23,9 @@
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongodb": "^4.13.0",
-    "swagger-ui-express": "^4.6.0"
+    "mongodb": "^4.13.0"
   },
   "devDependencies": {
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.8.3",
-    "swagger-autogen": "^2.22.0"
+    "nodemon": "^2.0.20"
   }
 }
