--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-openid-connect": "^2.12.0",
     "mongodb": "^5.0.0",
     "swagger-ui-express": "^4.6.0",
     "validatorjs": "^3.22.1"
